# ai_advisor

./: Dockerfile  README.md  main.py  pyproject.toml  railway.json
knowledge/: ba_geology.html  courses.csv  degree_programs.csv
src/ai_advisor/: crew.py  main.py
src/ai_advisor/config/: agents.yaml  tasks.yaml
src/ai_advisor/tools/: course_catalog_tool.py  degree_program_url_tool.py
