[project]
name = "ai_advisor"
version = "0.1.0"
description = "ai-advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
ai_advisor = "ai_advisor.main:run"
run_crew = "ai_advisor.main:run"
train = "ai_advisor.main:train"
replay = "ai_advisor.main:replay"
test = "ai_advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
